# mcpfarm.ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: .env.example  langgraph_agent.py  pyproject.toml
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/api-reference/: page.tsx
frontend/src/app/servers/: page.tsx
frontend/src/app/servers/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/: server-card.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: farm-store.ts
gateway/: Dockerfile  alembic.ini  pyproject.toml
gateway/alembic/: env.py
gateway/src/mcpfarm_gateway/: __init__.py  config.py  main.py
gateway/src/mcpfarm_gateway/api/: auth.py  deps.py  health.py  invocations.py  keys.py  schemas.py  servers.py  tools.py
gateway/src/mcpfarm_gateway/containers/: health.py  manager.py  watcher.py
gateway/src/mcpfarm_gateway/db/: __init__.py  models.py
gateway/src/mcpfarm_gateway/db/repositories/: __init__.py  api_keys.py  invocations.py  servers.py  tools.py
gateway/src/mcpfarm_gateway/mcp/: gateway_server.py  proxy_manager.py  tool_registry.py
gateway/src/mcpfarm_gateway/observability/: __init__.py  logging.py  metrics.py  middleware.py
gateway/src/mcpfarm_gateway/realtime/: redis_pubsub.py  ws_hub.py
gateway/tests/unit/: test_health.py  test_schemas.py  test_tool_registry.py
infra/docker/traefik/: traefik.yml
infra/grafana/dashboards/: mcpfarm-overview.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/prometheus/: prometheus.yml
scripts/: push.sh  restart.sh  start.sh  stop.sh
sdk/: pyproject.toml
sdk/src/mcpfarm_sdk/: __init__.py  auth.py  client.py
sdk/tests/: test_client.py  test_integration.py
servers/calculator/: Dockerfile  server.py
servers/communications/: Dockerfile  server.py
servers/data_science/: Dockerfile  server.py
servers/echo/: Dockerfile  pyproject.toml  server.py
servers/web_search/: server.py
