[project]
name = "mcpfarm-sdk"
version = "0.1.0"
description = "Python SDK for MCPFarm.ai"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-mcp-adapters>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpfarm_sdk"]
